--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -7,9 +7,9 @@ banner.location=classpath:banner.txt
 # = DATA SOURCE
 # ===============================
 
-spring.datasource.jdbc-url=jdbc:mysql://127.0.0.1:3306/bcssafy?allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.username=bcssafy
-spring.datasource.password=bcssafy
+spring.datasource.jdbc-url=jdbc:mysql://k3a101.p.ssafy.io/ssafy?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=skkim123!@#
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.maximum-pool-size=5
 
