--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,13 +9,16 @@
     "postversion": "node scripts/postversion.js"
   },
   "dependencies": {
+    "@material-ui/icons": "^4.9.1",
     "vue": "^2.6.11",
+    "vue-material": "^1.0.0-beta-15",
     "vue-meta": "^2.3.3",
     "vue-router": "^3.1.6",
     "vuetify": "^2.2.26"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
+    "@mdi/font": "^5.8.55",
     "@vue/cli-plugin-babel": "^4.3.1",
     "@vue/cli-plugin-eslint": "^4.3.1",
     "@vue/cli-plugin-router": "~4.3.1",
