--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@material-ui/icons": "^4.9.1",
+    "firebase": "^8.0.0",
     "vue": "^2.6.11",
     "vue-material": "^1.0.0-beta-15",
     "vue-meta": "^2.3.3",
     "vue-router": "^3.1.6",
+    "vue-textarea-autosize": "^1.1.1",
     "vuetify": "^2.2.26"
   },
   "devDependencies": {
