--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -7,7 +7,7 @@ banner.location=classpath:banner.txt
 # = DATA SOURCE
 # ===============================
 
-spring.datasource.jdbc-url=jdbc:mysql://k3a101.p.ssafy.io/ssafy?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.jdbc-url=jdbc:mysql://k3a101.p.ssafy.io/ssafy?allowPublicKeyRetrieval=true&useSSL=false&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=skkim123!@#
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
