Revert "Merge branch 'develop' of https://lab.ssafy.com/s03-final/s03p31a101 into develop"
This reverts commit 182ecc90d92a9c48f09c7b670306ffa6dd5358a8 [formerly 32a46b90639a8dedf9c457206911ee7e3c2dea7d], reversing
changes made to 32d3ea2b6c45e1cb908c6c15216afe83307f0b50 [formerly dc12e6d79088de37f7d5e48298b4eb64e597c8ad].


Former-commit-id: 62a95474afb7aa8df9f7281f79211a966df213e0

--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,2 +1,1 @@
-VUE_APP_API_HOST=http://k3a101.p.ssafy.io
-VUE_APP_API_PYTHON=http://k3a101.p.ssafy.io
+VUE_APP_API_HOST=http://k3a101.p.ssafy.io/api
