--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,1 +1,3 @@
-VUE_APP_API_HOST=http://k3a101.p.ssafy.io/api
+VUE_APP_API_HOST=http://k3a101.p.ssafy.io
+VUE_APP_API_PYTHON=http://k3a101.p.ssafy.io
+
